[package]
name = "b-reach"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
fxhash = "0.2"
notify = "8.2.0"
crossbeam-channel = "0.5.15"
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["sync", "macros"] }
grass = "0.13"
